[gd_scene load_steps=5 format=3 uid="uid://bu3pm3p7au2pa"]

[ext_resource type="Script" path="res://ui/shop.gd" id="1_ancoo"]
[ext_resource type="Texture2D" uid="uid://br3j1afb22r3y" path="res://models/debug-block_8740nt-hexagonal-2598-mm-architextures.jpg" id="2_06s6q"]
[ext_resource type="FontFile" uid="uid://cxvusk35yis3l" path="res://assets/font/Dadlygood.otf" id="3_4u1go"]
[ext_resource type="PackedScene" uid="uid://do3nk070srnll" path="res://ui/shop_empty.tscn" id="4_bqur2"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ancoo")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -401.5
offset_top = -281.0
offset_right = 401.5
offset_bottom = 211.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ShopBackground" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
self_modulate = Color(0.133333, 0.784314, 1, 0.235294)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_06s6q")
expand_mode = 3
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer/ShopBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Shop" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/ShopBackground/MarginContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/ShopBackground/MarginContainer/Shop"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("3_4u1go")
theme_override_font_sizes/font_size = 30
text = "SHOP"
vertical_alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/HBoxContainer/ShopBackground/MarginContainer/Shop"]
layout_mode = 2
size_flags_vertical = 3

[node name="ShopItem" type="GridContainer" parent="PanelContainer/MarginContainer/HBoxContainer/ShopBackground/MarginContainer/Shop/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 4

[node name="StorageBackground" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
self_modulate = Color(1, 0.466667, 1, 0.34902)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_06s6q")
expand_mode = 1
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer/StorageBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="BlueprintStorage" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/StorageBackground/MarginContainer"]
custom_minimum_size = Vector2(144, 0)
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/StorageBackground/MarginContainer/BlueprintStorage"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("3_4u1go")
theme_override_font_sizes/font_size = 30
text = "STORAGE"
horizontal_alignment = 1
vertical_alignment = 2

[node name="BlueprintStorageItem" type="GridContainer" parent="PanelContainer/MarginContainer/HBoxContainer/StorageBackground/MarginContainer/BlueprintStorage"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/v_separation = 10

[node name="Empty1" parent="PanelContainer/MarginContainer/HBoxContainer/StorageBackground/MarginContainer/BlueprintStorage/BlueprintStorageItem" instance=ExtResource("4_bqur2")]
visible = false
layout_mode = 2

[node name="Empty2" parent="PanelContainer/MarginContainer/HBoxContainer/StorageBackground/MarginContainer/BlueprintStorage/BlueprintStorageItem" instance=ExtResource("4_bqur2")]
visible = false
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -401.5
offset_top = 214.0
offset_right = 401.5
offset_bottom = 274.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="PlayerCurrency" type="Control" parent="PanelContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer2/MarginContainer/HBoxContainer/PlayerCurrency"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.937255, 0.956863, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("3_4u1go")
theme_override_font_sizes/font_size = 25
text = "Player Gold : 23553"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RerollButton" type="Button" parent="PanelContainer2/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_right = NodePath("../CloseButton")

[node name="Label" type="Label" parent="PanelContainer2/MarginContainer/HBoxContainer/RerollButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -11.5
offset_right = 23.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("3_4u1go")
theme_override_font_sizes/font_size = 25
text = "Reroll 15 Gold"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="PanelContainer2/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_left = NodePath("../RerollButton")

[node name="Label" type="Label" parent="PanelContainer2/MarginContainer/HBoxContainer/CloseButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -11.5
offset_right = 23.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.854902, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("3_4u1go")
theme_override_font_sizes/font_size = 25
text = "Close Shop"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="PanelContainer2/MarginContainer/HBoxContainer/RerollButton" to="." method="_on_reroll_button_mouse_entered"]
[connection signal="pressed" from="PanelContainer2/MarginContainer/HBoxContainer/RerollButton" to="." method="_on_reroll_button_pressed"]
[connection signal="mouse_entered" from="PanelContainer2/MarginContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_mouse_entered"]
[connection signal="pressed" from="PanelContainer2/MarginContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
